--- a/precipitation.qmd
+++ b/precipitation.qmd
@@ -11,11 +11,137 @@ library(spdep)
 knitr::opts_chunk$set(
   echo = F, message = F, warning = F, fig.height = 6, fig.width = 8,
   cache = T, cache.lazy = F)
+pr_pal <- c("#543005", "#f7f7f7", "#003c30")
+```
+
+## Amazon (NW)
+
+We used CHIRPS data at 0.05-degree resolution with annual precipitation accumulation. Yearly precipitation changes were then calculated by computing the means over two periods at the end (2020 to 2022) and start (2000 to 2002) of the study period. Using 3-y averages reduces the influences of climate variability.
+
+```{r data}
+#| include: false
+pr_ind <- rast("results/data/chirps_indices.nc")
+pr <- rast("results/data/chirps_anomalies.nc")
+deforest <- rast("results/data/tmf_deforested_2022_2000.tif") %>% 
+  resample(pr)
+data <- lapply(deforest, as.data.frame, xy = T) %>% 
+  bind_rows() %>% 
+  left_join(as.data.frame(pr, xy = TRUE)) %>% 
+  na.omit() %>% 
+  mutate(intact = 1)
+```
+
+```{r ca2022}
+ggplot() +
+  tidyterra::geom_spatraster(data = pr_ind[[22]]) +
+  geom_sf(data = st_read("data/capricho/capricho.shp", quiet = TRUE),
+          fill = NA, col = "black", linewidth = .8) +
+  theme_bw() +
+  scale_fill_viridis_c("mm", na.value = NA) +
+  scale_fill_gradient2(low = pr_pal[1], mid = pr_pal[2], high = pr_pal[3], midpoint = 2400, "mm", na.value = NA) +
+  ggtitle("Precipitaiton 2022")
+```
+
+```{r caanom}
+ggplot() +
+  tidyterra::geom_spatraster(data = pr) +
+  geom_sf(data = st_read("data/capricho/capricho.shp", quiet = TRUE),
+          fill = NA, col = "black", linewidth = .8) +
+  theme_bw() +
+  scale_fill_gradient2(low = pr_pal[1], mid = pr_pal[2], high = pr_pal[3], midpoint = 0, "mm", na.value = NA) +
+  ggtitle("Precipitation anomalies", "2000:2002 vs 2020:2022")
+```
+
+### Comparisons
+
+Comparing deforestation surfaces to climate anomalies seems to indicate a decrease in precipitation with increasing deforestation surfaces. But caution should be taken because of possible spatial proximity between deforested pixels that could confound with the spatial structure of climate anomalies.
+
+```{r cacomp}
+step <- 0.1
+top <- 10
+data %>% 
+  mutate(deforest = cut(deforest, breaks = seq(0, top, by = step),
+                               labels = seq(0, (top-step), by = step)+step/2)) %>% 
+  mutate(deforest = as.numeric(as.character(deforest))) %>% 
+  na.omit() %>% 
+  ggplot(aes(deforest, precipitation)) +
+  geom_boxplot(aes(group = as.character(deforest))) +
+  theme_bw() +
+  geom_smooth(method = "lm") +
+  xlab("Deforestation surface (km2, 2000-2022)") +
+  ylab("January anomalies of mean temperature at surface")
+```
+
+### Linear regressions
+
+Classic linear regression without accounting for spatial autocorrelation found a general and significant increase in precipitation (+67mm/year), probably due too global climate change and as reported by IPCC for the north-west of South Amaerica, and a significant decrease in precipitation (-20mm/year) per deforested $km^2$ in cells of ca. $25 km^2$. Inspecting models residuals revealed a significant spatial autocorrelation but below up to several hundred of kilometres questioning the robustness of the results.
+
+```{r calm}
+reg <- lm(precipitation ~ deforest, data)
+sjPlot::tab_model(reg)
+```
+
+```{r calmcor}
+data$res <- residuals(reg) 
+n <- 10^3
+data2 <- sample_n(data, n)
+cor <- pgirmess::correlog(data.frame(data2$x, data2$y), data2$deforest,
+                   method = "Moran", nbclass = 30) %>% 
+  as.data.frame()
+cor %>% 
+  ggplot(aes(x = dist.class*100, y = coef)) + 
+  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
+  geom_hline(yintercept = 0) +
+  theme_bw() +
+  xlab("Distance (km)") + ylab("Moran\'s I") +
+  scale_x_log10() +
+  ylim(-1, 1) +
+  ggtitle("Residuals spatial auto-correlation")
+```
+
+### Spatial regressions
+
+To account for spatial autocorrelation, we took advantage of a method including spatial autocorrelation in model error (CAR, conditional autoregression see note below). We confirmed a significant effect of deforestation on precipitation loss (-10mm/km2/year).
+
+```{r sr}
+#| eval: false
+#| include: false
+n <- 10^4
+data2 <- sample_n(data, n)
+nb <- dnearneigh(data2[c("x", "y")], 0, 50, longlat = T)
+sr <- spautolm(precipitation ~ deforest, data2, 
+               listw = nb2listw(nb, zero.policy = TRUE), family = "CAR")
+save(sr, file = "save/pr.Rdata")
+```
+
+```{r srsum}
+load("save/pr.Rdata")
+summary(sr)
+```
+
+```{r casrcor}
+#| eval: false
+#| include: false
+data$res <- residuals(sr)
+n <- 10^3
+data2 <- sample_n(data, n)
+cor <- pgirmess::correlog(data.frame(data2$x, data2$y), data2$deforest,
+                   method = "Moran", nbclass = 30) %>% 
+  as.data.frame()
+cor %>% 
+  ggplot(aes(x = dist.class*100, y = coef)) + 
+  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
+  geom_hline(yintercept = 0) +
+  theme_bw() +
+  xlab("Distance (km)") + ylab("Moran\'s I") +
+  scale_x_log10() +
+  ylim(-1, 1) +
+  ggtitle("Residuals spatial auto-correlation")
 ```
 
 ## Capricho
 
-We used ERA5-Land data at 0.01-degree resolution with hourly precipitation aggregated to the day.
+We used ERA5-Land data at 0.01-degree resolution with hourly precipitation aggregated to different time steps (day, 5-days or pentad, 15-days or bi-week, month and year).
 
 ```{r era}
 data <- vroom::vroom("~/Documents/getEra/results/hourly/era5_capricho.csv") %>% 
@@ -24,47 +150,32 @@ data <- vroom::vroom("~/Documents/getEra/results/hourly/era5_capricho.csv") %>%
   summarise(precipitation = sum(precipitation))
 ```
 
-### Day
+### Intra-annual
+
+Intra-annual patterns revealed a wet season from \~April to \~August and a dry season the rest of the year as discussed in the end.
 
 ```{r}
-data %>% 
-  ggplot(aes(date, precipitation)) +
-  geom_line() +
-  geom_point() +
-  theme_bw() +
-  xlab("") + ylab("Precipitation (mm/day)")
-```
-
-```{r}
-data %>% 
-  mutate(year = year(date)) %>% 
-  mutate(day = yday(date)) %>% 
-  ggplot(aes(day, precipitation)) +
-  geom_line(aes(group = year, col = year)) +
-  theme_bw() +
-  geom_smooth(col = "red") +
-  scale_color_viridis_c() +
-  xlab("") + ylab("Precipitation (mm/day)") +
-  scale_x_continuous(breaks = yday(as_date(paste0("2001-", 1:12, "-1"))),
-                     labels = c("J", "F", "M", "A", "M", "J", "J", "A", "S", "O", "N", "D"))
-```
-
-### Pentad
-
-```{r}
-data %>% 
-  group_by(date = round_date(date, "5 days")) %>% 
+get_fig_1 <- function(period)
+  data %>% 
+  group_by(date = round_date(date, period)) %>% 
   summarise(precipitation = sum(precipitation)) %>% 
   ggplot(aes(date, precipitation)) +
   geom_line() +
   geom_point() +
   theme_bw() +
-  xlab("") + ylab("Precipitation (mm/pentad)")
+  xlab("") + ylab(paste0("Precipitation (mm/", period, ")"))
+cowplot::plot_grid(
+  get_fig_1("day"),
+  get_fig_1("5 days"),
+  get_fig_1("15 days"),
+  get_fig_1("month")
+)
 ```
 
 ```{r}
-data %>% 
-  group_by(date = round_date(date, "5 days")) %>% 
+get_fig_2 <- function(period)
+  data %>% 
+  group_by(date = round_date(date, period)) %>% 
   summarise(precipitation = sum(precipitation)) %>% 
   mutate(year = year(date)) %>% 
   mutate(day = yday(date)) %>% 
@@ -73,81 +184,20 @@ data %>%
   theme_bw() +
   geom_smooth(col = "red") +
   scale_color_viridis_c() +
-  xlab("") + ylab("Precipitation (mm/pentad)") +
+  xlab("") + ylab(paste0("Precipitation (mm/", period, ")")) +
   scale_x_continuous(breaks = yday(as_date(paste0("2001-", 1:12, "-1"))),
                      labels = c("J", "F", "M", "A", "M", "J", "J", "A", "S", "O", "N", "D"))
+cowplot::plot_grid(
+  get_fig_2("day"),
+  get_fig_2("5 days"),
+  get_fig_2("15 days"),
+  get_fig_2("month")
+)
 ```
 
-### Biweek
+### Inter-annual
 
-```{r}
-data %>% 
-  group_by(date = round_date(date, "15 days")) %>% 
-  summarise(precipitation = sum(precipitation)) %>% 
-  ggplot(aes(date, precipitation)) +
-  geom_line() +
-  geom_point() +
-  theme_bw() +
-  xlab("") + ylab("Precipitation (mm/15-days)")
-```
-
-```{r}
-data %>% 
-  group_by(date = round_date(date, "15 days")) %>% 
-  summarise(precipitation = sum(precipitation)) %>% 
-  mutate(year = year(date)) %>% 
-  mutate(day = yday(date)) %>% 
-  ggplot(aes(day, precipitation)) +
-  geom_line(aes(group = year, col = year)) +
-  theme_bw() +
-  geom_smooth(col = "red") +
-  scale_color_viridis_c() +
-  xlab("") + ylab("Precipitation (mm/15-days)") +
-  scale_x_continuous(breaks = yday(as_date(paste0("2001-", 1:12, "-1"))),
-                     labels = c("J", "F", "M", "A", "M", "J", "J", "A", "S", "O", "N", "D"))
-```
-
-### Month
-
-```{r}
-data %>% 
-  group_by(date = round_date(date, "month")) %>% 
-  summarise(precipitation = sum(precipitation)) %>% 
-  ggplot(aes(date, precipitation)) +
-  geom_line() +
-  geom_point() +
-  theme_bw() +
-  xlab("") + ylab("Precipitation (mm/month)")
-```
-
-```{r}
-data %>% 
-  group_by(date = round_date(date, "month")) %>% 
-  summarise(precipitation = sum(precipitation)) %>% 
-  mutate(year = year(date)) %>% 
-  mutate(day = yday(date)) %>% 
-  ggplot(aes(day, precipitation)) +
-  geom_line(aes(group = year, col = year)) +
-  theme_bw() +
-  geom_smooth(col = "red") +
-  scale_color_viridis_c() +
-  xlab("") + ylab("Precipitation (mm/month)") +
-  scale_x_continuous(breaks = yday(as_date(paste0("2001-", 1:12, "-1"))),
-                     labels = c("J", "F", "M", "A", "M", "J", "J", "A", "S", "O", "N", "D"))
-```
-
-### Year
-
-```{r}
-data %>% 
-  group_by(date = round_date(date, "year")) %>% 
-  summarise(precipitation = sum(precipitation)) %>% 
-  ggplot(aes(date, precipitation)) +
-  geom_line() +
-  geom_point() +
-  theme_bw() +
-  xlab("") + ylab("Precipitation (mm/year)")
-```
+Inter-annual patterns revealed an increase in time of precipitation variability, defined as difference between the lowest and the highest month, that is correlated to forest cover loss, but could also simply explained by global climate change.
 
 ```{r}
 data %>% 
@@ -159,7 +209,6 @@ data %>%
   geom_line() +
   theme_bw() +
   xlab("") + ylab("Yearly variations of monthly precipitation (mm/year)") +
-  ggtitle("Yearly variability in Capricho") +
   geom_smooth(col = "red")
 ```
 
@@ -201,7 +250,11 @@ data %>%
 
 ### Dry season
 
-> The observed DSE is determined by the first date when the pentad mean rain rate changes from below to above the climatological annual mean rain rate of the same rainfall dataset during six out of eight pentads, and vice versa for the DSA ([19](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r19)). This definition captures the rapid transition from a lower to higher rainfall regime associated with the DSE, and vice versa for the DSA. The DSE and DSA are not influenced by any bias of rainfall amount, as long as the temporal patterns of the rainfall variation are not affected. Similar definitions have been widely used in the literature ([18](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r18), [19](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r19), [23](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r23)). For analysis of models, we modify our criterion to five out of eight pentads to best match the modeled DSE and DSA with observations. @fu2013
+We computed dry season arrival, end and length following @fu2013:
+
+> The observed DSE is determined by the first date when the pentad mean rain rate changes from below to above the climatological annual mean rain rate of the same rainfall dataset during six out of eight pentads, and vice versa for the DSA ([19](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r19)). This definition captures the rapid transition from a lower to higher rainfall regime associated with the DSE, and vice versa for the DSA. The DSE and DSA are not influenced by any bias of rainfall amount, as long as the temporal patterns of the rainfall variation are not affected. Similar definitions have been widely used in the literature ([18](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r18), [19](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r19), [23](https://www.pnas.org/doi/full/10.1073/pnas.1302584110#core-r23)). For analysis of models, we modify our criterion to five out of eight pentads to best match the modeled DSE and DSA with observations.
+
+We observed no trend of any metrics that did not encouraged us to explore a link between forest cover and dry season characteristics at a larger scale.
 
 ```{r}
 pentads <- data %>% 
@@ -252,113 +305,4 @@ dsl %>%
   geom_smooth(method = "lm") +
   ggpubr::stat_cor() +
   theme(legend.position = "bottom")
-```
-
-## Colombian Amazon
-
-We used CHIRPS data downscaled at 0.01-degree resolution with pentad (5-days) precipitation accumulation. Yearly precipitation changes were then calculated by computing the monthly means over two periods at the end (2020 to 2022) and start (2000 to 2002) of the study period. Using 3-y averages reduces the influences of climate variability.
-
-```{r data}
-#| include: false
-pr_ind <- rast("results/data/chirps_indices_amazon.nc")
-pr <- rast("results/data/chirps_anomalies_amazon.nc")
-deforest <- rast("results/data/tmf_deforested_2022_2000_amzaon.tif") %>% 
-  resample(pr)
-data <- lapply(deforest, as.data.frame, xy = T) %>% 
-  bind_rows() %>% 
-  left_join(as.data.frame(pr, xy = TRUE)) %>% 
-  na.omit() %>% 
-  mutate(intact = 1)
-```
-
-```{r ca2022}
-ggplot() +
-  tidyterra::geom_spatraster(data = pr_ind[[22]]) +
-  geom_sf(data = st_read("data/capricho/capricho.shp", quiet = TRUE),
-          fill = NA, col = "red", linewidth = 1.5) +
-  theme_bw() +
-  scale_fill_viridis_c("mm", na.value = NA) +
-  ggtitle("Precipitaiton 2022")
-```
-
-```{r caanom}
-ggplot() +
-  tidyterra::geom_spatraster(data = pr) +
-  geom_sf(data = st_read("data/capricho/capricho.shp", quiet = TRUE),
-          fill = NA, col = "red", linewidth = 1.5) +
-  theme_bw() +
-  scale_fill_viridis_c("mm", na.value = NA) +
-  ggtitle("Precipitation anomalies", "2000:2002 vs 2020:2022")
-```
-
-### Comparisons
-
-Comparing deforestation surfaces to climate anomalies seems to indicate a decrease in precipitation with increasing deforestation surfaces. But caution should be taken because of possible spatial proximity between deforested pixels that could confound with the spatial structure of climate anomalies.
-
-```{r cacomp}
-step <- 5
-top <- 200
-data %>% 
-  mutate(deforest = cut(deforest, breaks = seq(0, top, by = step),
-                               labels = seq(0, (top-step), by = step)+step/2)) %>% 
-  mutate(deforest = as.numeric(as.character(deforest))) %>% 
-  na.omit() %>% 
-  ggplot(aes(deforest, precipitation)) +
-  geom_boxplot(aes(group = as.character(deforest))) +
-  theme_bw() +
-  geom_smooth() +
-  xlab("Deforestation surface (km2, 2000-2022)") +
-  ylab("January anomalies of mean temperature at surface")
-```
-
-### Linear regressions
-
-Classic linear regression without accounting for spatial autocorrelation found a general and significant decrease in precipitation (-240mm/year) and a significant decrease in precipitation (-81mm/year) with deforestation. However, inspecting models residuals revealed a significant spatial autocorrelation of model errors up to several hundred of kilometres questioning the robustness of the results.
-
-```{r calm}
-reg <- lm(precipitation ~ deforest, data)
-sjPlot::tab_model(reg)
-```
-
-```{r calmcor}
-data$res <- residuals(reg) 
-cor <- pgirmess::correlog(data.frame(data$x, data$y), data$res,
-                   method = "Moran", nbclass = 30) %>% 
-    as.data.frame()
-cor %>% 
-  ggplot(aes(x = dist.class*100, y = coef)) + 
-  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
-  geom_hline(yintercept = 0) +
-  theme_bw() +
-  xlab("Distance (km)") + ylab("Moran\'s I") +
-  scale_x_log10() +
-  ylim(-1, 1) +
-  ggtitle("Residuals spatial auto-correlation")
-```
-
-### Spatial regressions
-
-To account for spatial autocorrelation, we took advantage of a method including spatial autocorrelation in model error (spNNGP, Gaussian univariate Bayesian spatial regression models using Nearest Neighbor Gaussian Processes, see note below). We found only a small significant effect of deforestation on precipitation decrease accounting for spatial autocorrelation (-3mm/year).
-
-```{r}
-nb <- dnearneigh(data[c("x", "y")], 0, 50, longlat = T)
-sr <- spautolm(precipitation ~ deforest, data, 
-               listw = nb2listw(nb, zero.policy = TRUE), family = "SAR")
-summary(sr)
-```
-
-```{r casrcor}
-data$res <- residuals(sr)
-cor <- pgirmess::correlog(data.frame(data$x, data$y), data$res,
-                   method = "Moran", nbclass = 30) %>% 
-    as.data.frame()
-cor %>% 
-  ggplot(aes(x = dist.class*100, y = coef)) + 
-  geom_point(aes(alpha = p.value < 0.01)) + geom_line() +
-  geom_hline(yintercept = 0) +
-  theme_bw() +
-  xlab("Distance (km)") + ylab("Moran\'s I") +
-  scale_x_log10() +
-  ylim(-1, 1) +
-  ggtitle("Residuals spatial auto-correlation")
 ```
